In TextInputManager, reset input type to none before switching active widgets.

When there are no OOPIFs in a page, if we switch focus from one <input>
into another (i.e., through a mouse click), the TextInputState will be
first set to NONE and then back to TEXT.

This however does not always happen when there are OOPIFs since the two IPCs might
arrive from different RenderWidgets and the order of arrival is not
deterministic (e.g., the IPC to set to TEXT could arrive sooner).

Although TextInputManager tracks the state and active widget correctly
(regardless of what order the IPCs arrive from the RenderWidgets), it
still does not mimic the exact same behavior as in the single
RenderWidget case. In Aura platforms, without setting the
TextInputState to none before changing the active widget, the IME
behavior might go wrong and InputMethod behave out of sync with the
actual TextInputState. The reason is that the InputMethod would believe
that the TextInputClient is the same but the IME session has ended.

This CL will try to simulate the same behavior for all scenarios by
injecting a TextInputState of none in between an active widget change.

BUG=626171,578168,602723

Review-Url: https://codereview.chromium.org/2171443003
Cr-Commit-Position: refs/heads/master@{#408239}

Former-commit-id: 44c242985f1c9f81dc56e7d5122776250b1f1a66